<resources>
    <string name="app_name">Komoditas.id</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Selamat datang di Komoditas!</string>
    <string name="title_activity_upload">Jual</string>
    <string name="delete_this_item">Hapus</string>
    <string name="caption">Tulis deskripsi di sini</string>
    <string name="swipe_left_to_delete">Geser ke kiri untuk menghapus</string>
    <string name="tambah_foto">Tambah foto</string>
    <string name="anda_yakin">Anda yakin ingin kembali?</string>
    <string name="yakin">Yakin</string>
    <string name="tetap_disini">Tetap di sini</string>
    <string name="komoditasdotid">Komoditas.id</string>
    <string name="permission_minta">Anda harus mengizinkan akses lokasi atau anda tidak dapat menggunakan aplikasi ini</string>
    <string name="paham">Paham</string>
    <string name="title_activity_detail">Detail</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_chatting">Pesan</string>
    <string name="title_activity_profile">Profil saya</string>
    <string name="title_activity_list_chat">Pesan langsung</string>
    <string name="title_activity_beli">Beli</string>
    <string name="batalkan_transaksi">Anda yakin ingin memabatalkan transaksi ini?</string>
    <string name="harap_isi_semua_form">Harap isi semua form</string>
    <string name="batal">BATAL</string>
    <string name="image_preview_on_post">image preview on post</string>
    <string name="harga">Harga</string>
    <string name="selamat_datang">Selamat datang</string>
    <string name="deskripsi_login">Anda perlu masuk untuk melanjutkan. Pastikan anda memiliki akun google yang ditautkan dengan ponsel ini.</string>
    <string name="terms_and_condition">Dengan sign in, anda menyetujui kebijakan privasi kami</string>
    <string name="nama_barang">Judul</string>

    <string-array name="spinner_beli">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="spinner_tipe_barang">
        <item>PANEN</item>
        <item>PUPUK</item>
        <item>BENIH</item>
        <item>TERNAK</item>
    </string-array>
    <string name="title_activity_cari">CariActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="ketik_pesan">Ketik pesan</string>
    <string name="title_activity_other_profile">Person</string>
    <string name="title_activity_person">Person</string>
    <string name="title_activity_persons">Person</string>
    <string name="title_activity_transaction">Transaksi saya</string>
    <string name="transaksi_ini_sudah_ada">Barang yang anda maksud sudah dipesan oleh orang lain</string>
    <string name="kembali">Kembali</string>
    <string name="tunggu_transaksi">Tunggu untuk penjual mengirimkan komoditas ke tempat anda. Anda juga dapat melihat lokasi terbaru dari pengiriman</string>
    <string name="tunggu_transaksi_penjual">Segera kirimkan komoditas ke pembeli. Pilih driver lalu klik ok dan pastikan driver menerima orderan anda</string>
    <string name="title_activity_choose_driver">Pilih jasa ekspedisi</string>
    <string name="title_activity_tracking">Tracking</string>
</resources>
