<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.ydhnwb.comodity.LoginActivity">

    <RelativeLayout
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/close_login"
                android:layout_marginBottom="16dp"
                android:src="@drawable/ic_action_close"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="close" />
            <TextView
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/materialBlack"
                android:textSize="32sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selamat_datang"/>
            <TextView
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/materialBlack"
                android:text="@string/deskripsi_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_sign_in"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </com.google.android.gms.common.SignInButton>
        <com.airbnb.lottie.LottieAnimationView
            android:layout_marginTop="32dp"
            android:layout_below="@id/google_sign_in"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:lottie_rawRes="@raw/semangka"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>

        <TextView
            android:padding="16dp"
            android:layout_alignParentBottom="true"
            android:textColor="@color/colorGrey"
            android:gravity="center"
            android:text="@string/terms_and_condition"
            android:layout_marginTop="38dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
